tests/rosetta/transpiler/Rust/file-input-output-1.error
warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-input-output-1.rs:45:110
   |
45 |         static g_fs: LazyLock<Mutex<HashMap<String, String>>> = LazyLock::new(|| Mutex::new(HashMap::new()));;
   |                                                                                                              ^ help: remove this semicolon
   |
   = note: `#[warn(redundant_semicolons)]` on by default

warning: unnecessary trailing semicolon
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-input-output-1.rs:50:2
   |
50 | };
   |  ^ help: remove this semicolon

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-input-output-1.rs:54:32
   |
54 |         let duration_us: i64 = ((_end - _start) / 1000);
   |                                ^                      ^
   |
   = note: `#[warn(unused_parens)]` on by default
help: remove these parentheses
   |
54 -         let duration_us: i64 = ((_end - _start) / 1000);
54 +         let duration_us: i64 = (_end - _start) / 1000;
   |

warning: unnecessary parentheses around assigned value
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-input-output-1.rs:55:33
   |
55 |         let memory_bytes: i64 = (_end_mem - _start_mem);
   |                                 ^                     ^
   |
help: remove these parentheses
   |
55 -         let memory_bytes: i64 = (_end_mem - _start_mem);
55 +         let memory_bytes: i64 = _end_mem - _start_mem;
   |

error[E0658]: use of unstable library feature `str_as_str`
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-input-output-1.rs:47:61
   |
47 |     let mut data: String = g_fs.lock().unwrap()["input.txt".as_str()].clone().clone();
   |                                                             ^^^^^^
   |
   = note: see issue #130366 <https://github.com/rust-lang/rust/issues/130366> for more information

error[E0308]: mismatched types
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-input-output-1.rs:48:73
   |
48 |     { let mut _map = g_fs.lock().unwrap(); let _val = data; _map.insert("output.txt".clone(), _val); };
   |                                                                  ------ ^^^^^^^^^^^^^-----^^
   |                                                                  |      |            |
   |                                                                  |      |            help: try using a conversion method: `to_string`
   |                                                                  |      expected `String`, found `&str`
   |                                                                  arguments to this method are incorrect
   |
note: method defined here
  --> /rustc/17067e9ac6d7ecb70e50f92c1944e545188d2359/library/std/src/collections/hash/map.rs:1201:12

error[E0658]: use of unstable library feature `str_as_str`
  --> /workspace/mochi/tests/rosetta/transpiler/Rust/file-input-output-1.rs:49:54
   |
49 |     println!("{}", g_fs.lock().unwrap()["output.txt".as_str()].clone());
   |                                                      ^^^^^^
   |
   = note: see issue #130366 <https://github.com/rust-lang/rust/issues/130366> for more information

error: aborting due to 3 previous errors; 4 warnings emitted

Some errors have detailed explanations: E0308, E0658.
For more information about an error, try `rustc --explain E0308`.
